# messageQueue

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/api-plan-workflow/: SKILL.md
.claude/skills/api-planning/: SKILL.md
.claude/skills/api-scaffold/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/docs-sync/: SKILL.md
.claude/skills/explain-tech/: SKILL.md
.claude/skills/plan-review/: SKILL.md
.claude/skills/pptx/: SKILL.md
.claude/skills/project-init/: SKILL.md
.claude/skills/project-status/: SKILL.md
.claude/standards/: Project_CLAUDE.md  anti-patterns.md  code-standards.md  communication.md  security.md  skills.md  spec-docs-guide.md  workflow.md
configs/cluster/: haproxy.cfg  rabbitmq.conf
docs/: CLUSTER_QUICKSTART.md  rabbitmq-cluster-production-guide.md  rabbitmq-infra-guide.md  rabbitmq-tls-guide.md
scripts/cluster/: backup-rabbitmq.sh  health-check.sh  setup-cluster.sh
src/message_queue/: __init__.py  config.py
tests/: test_connection.py
